crates/toml/tests/snapshots/invalid/array/no-close-06.stderr
TOML parse error at line 1, column 26
  |
1 | no-close-6 = [{ key = 42 #}]
  |                          ^^^
comments are unsupported in inline tables, expected nothing

---
TOML parse error at line 1, column 30
  |
1 | no-close-6 = [{ key = 42 #}]
  |                              ^
unclosed inline table, expected `}`

---
TOML parse error at line 1, column 25
  |
1 | no-close-6 = [{ key = 42 #}]
  |                         ^
unclosed array, expected `]`
